# toss

./: .gitignore  Cargo.toml  README.md  alternating-caps.asm  basic-input.asm  debug.gdb  input-buffer.asm  input-string.asm  os-target.json  os.asm  os.nasm  print-number.asm  read-disk.asm  run.bat  run.sh  rust-toolchain.toml  template.asm
.devcontainer/: devcontainer.json  postCreate.sh
asm/: alternating-caps.asm  input-buffer.asm  input-string.asm  print-number.asm  protected-mode.asm  read-disk.asm
boot/: Cargo.toml  build.rs  linker.ld
boot/src/: boot.S  boot.asm  disk.rs  main.rs
kernel/: Cargo.toml  linker.ld
kernel/src/: main.rs
qemu/: Cargo.toml  build.rs
qemu/src/: main.rs
